Fix loc tile: stretch image to fill full slot (100% 100%)

--- a/src/app/game/[id]/GameBoard.module.css
+++ b/src/app/game/[id]/GameBoard.module.css
@@ -287,7 +287,7 @@
   border: 1px solid transparent;
   transition: filter 0.12s, border-color 0.12s;
   cursor: default;
-  background: url('/images/loc-tile.png') center / cover no-repeat;
+  background: url('/images/loc-tile.png') center / 100% 100% no-repeat;
   position: relative;
 }
 
